--- a/SampleWebApp/pom.xml
+++ b/SampleWebApp/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.sample.webproject</groupId>
   <artifactId>SampleWebApp</artifactId>
   <packaging>war</packaging>
-  <version>1.0.${env.jenkinsBuildNumber}-SNAPSHOT-SNAPSHOT</version>
+  <version>1.0.${env.jenkinsBuildNumber}-SNAPSHOT</version>
   <name>SampleWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
