--- a/SampleWebApp/pom.xml
+++ b/SampleWebApp/pom.xml
@@ -11,7 +11,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>1.0.${env.jenkinsBuildNumber}-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
