--- a/SampleWebApp/pom.xml
+++ b/SampleWebApp/pom.xml
@@ -4,14 +4,14 @@
   <groupId>com.sample.webproject</groupId>
   <artifactId>SampleWebApp</artifactId>
   <packaging>war</packaging>
-  <version>1.0.${env.jenkinsBuildNumber}-SNAPSHOT</version>
+  <version>1.0.${BuildNumber}-SNAPSHOT</version>
   <name>SampleWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>1.0.${env.jenkinsBuildNumber}-SNAPSHOT</version>
+      <version>3.8.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
