--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: "Say day/month"
         run: |
+          echo "${{ github.run_number }}"
+          echo "${{ github.run_id }}"
           echo "Today is $DAY_OF_WEEK!"
           echo "Today is $MONTH_OF_YEAR!"
           echo "This is a commit message: ${{ github.event.head_commit.message }}"
