--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: "Say day/month"
         run: |
+          echo "${{ github.ref_name }}"
           echo "${{ github.run_number }}"
           echo "${{ github.run_id }}"
           echo "Today is $DAY_OF_WEEK!"
