--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - name: "Say day/month"
         run: |
+          echo ${{ github.ref_name }}
           echo "Today is $DAY_OF_WEEK!"
           echo "Today is $MONTH_OF_YEAR!"
           echo "This is a commit message: ${{ github.event.head_commit.message }}"
@@ -23,7 +24,7 @@ jobs:
   second_job:
     runs-on: ubuntu-latest
     #if: ${{ github.ref == 'refs/heads/release/*' }}
-    if: ${{ github.ref_name == 'release/*' }}
+    if: github.ref_name == 'release/*'
     needs: greeting_job
     steps:
       - name: "Say day/month"
