--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - name: "Say day/month"
         run: |
+          
           echo "${{ github.ref_name }}"
           echo "${{ github.run_number }}"
           echo "${{ github.run_id }}"
@@ -25,8 +26,8 @@ jobs:
           
   second_job:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/release/**' }}
-    #if: github.ref_name == 'release/**'
+    #if: ${{ github.ref == 'refs/heads/release/**' }}
+    if: github.ref_name == 'release/**'
     needs: greeting_job
     steps:
       - name: "Say day/month"
