--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches: [release/*]
 env:
+  BRANCH_NAME: ${{ github.ref }}
   MONTH_OF_YEAR: February
   DAY_OF_WEEK: Monday
 
@@ -26,8 +27,8 @@ jobs:
           
   second_job:
     runs-on: ubuntu-latest
-    #if: ${{ github.ref == 'refs/heads/release/**' }}
-    if: github.ref_name == 'release/**'
+    if: ${{ github.ref == '$BRANCH_NAME' }}
+    #if: github.ref_name == 'release/**'
     needs: greeting_job
     steps:
       - name: "Say day/month"
