--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,11 +23,12 @@ jobs:
           echo "${{ github.run_id }}"
           echo "Today is $DAY_OF_WEEK!"
           echo "Today is $MONTH_OF_YEAR!"
+          echo '${{ env.BRANCH_NAME }}'
           echo "This is a commit message: ${{ github.event.head_commit.message }}"
           
   second_job:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == '$BRANCH_NAME' }}
+    if: github.ref == '${{ env.BRANCH_NAME }}'
     #if: github.ref_name == 'release/**'
     needs: greeting_job
     steps:
