--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,8 @@ jobs:
           
   second_job:
     runs-on: ubuntu-latest
-    if: github.ref == '${{ env.BRANCH_NAME }}'
+    if: contains(github.ref, 'release')
+    #if: github.ref == '${{ env.BRANCH_NAME }}'
     #if: github.ref_name == 'release/**'
     needs: greeting_job
     steps:
