--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,11 @@
 name: test var
 on: 
-  pull_request:
-    branches: [release/*]
+#  pull_request:
+ #   branches: [release/*]
   push:
-    branches: [release/*]
+    tags:        
+      - test/**
+  #  branches: [release/*]
 env:
   BRANCH_NAME: ${{ github.ref }}
   MONTH_OF_YEAR: February
